# data-science-ipython-notebooks

./: .gitignore  pyproject.toml
scikit-learn/: scikit-learn-gmm.ipynb  scikit-learn-intro.ipynb  scikit-learn-k-means.ipynb  scikit-learn-linear-reg.ipynb  scikit-learn-pca.ipynb  scikit-learn-random-forest.ipynb  scikit-learn-svm.ipynb  scikit-learn-validation.ipynb
scikit-learn/fig_code/: figures.py
